# point_cloud_subsampler

./: CMakeLists.txt  README.md  nodelets.xml  package.xml
cfg/: PointCloudSubSampler.cfg
include/point_cloud_subsampler/: point_cloud_subsampler.h
launch/: subsampler_nodelet.launch
src/point_cloud_subsampler/: node.cpp  nodelet.cpp  point_cloud_subsampler.cpp
